--- a/public/404.html
+++ b/public/404.html
@@ -112,7 +112,7 @@
 
   
   
-    <meta name="author" content="Viktor Kurilla">
+    <meta name="author" content="viku">
   
   
     
@@ -494,7 +494,7 @@
       <p class="text-sm text-neutral-500 dark:text-neutral-400">
           &copy;
           2025
-          Viktor Kurilla
+          viku
       </p>
     
 
