--- a/public/videos/index.html
+++ b/public/videos/index.html
@@ -114,7 +114,7 @@
 
   
   
-    <meta name="author" content="viku">
+    <meta name="author" content="viku:-)">
   
   
     
@@ -682,7 +682,7 @@
       <p class="text-sm text-neutral-500 dark:text-neutral-400">
           &copy;
           2025
-          viku
+          viku:-)
       </p>
     
 
